--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,66 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizeLegibility;
+	box-sizing: border-box;
+	font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+}
+
+@layer base {
+	:root {
+		--color-cloudGray: 72% 0.01 257;
+	}
+	@font-face {
+		font-family: 'Open Sans';
+		font-style: normal;
+		font-weight: 100 900;
+		font-display: swap;
+		src:
+			local(''),
+			url('/fonts/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
+	}
+
+	@font-face {
+		font-family: 'Open Sans';
+		font-style: italic;
+		font-weight: 100 900;
+		font-display: swap;
+		src:
+			local(''),
+			url('/fonts/Open_Sans/OpenSans-Italic-VariableFont_wdth,wght.ttf') format('truetype');
+	}
+}
+
+@layer utilities {
+	.font-thin {
+		font-variation-settings: 'wght' 100;
+	}
+	.font-extralight {
+		font-variation-settings: 'wght' 200;
+	}
+	.font-light {
+		font-variation-settings: 'wght' 300;
+	}
+	.font-normal {
+		font-variation-settings: 'wght' 400;
+	}
+	.font-medium {
+		font-variation-settings: 'wght' 500;
+	}
+	.font-semibold {
+		font-variation-settings: 'wght' 600;
+	}
+	.font-bold {
+		font-variation-settings: 'wght' 700;
+	}
+	.font-extrabold {
+		font-variation-settings: 'wght' 800;
+	}
+	.font-black {
+		font-variation-settings: 'wght' 900;
+	}
+}
